[tool.poetry]
name = "xdrngtool"
version = "1.0.0"
description = ""
authors = ["Koutaro Mukai <mukai.k1011k@outlook.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
xddb = {git = "https://github.com/yatsuna827/xddb", rev = "main"}


[tool.poetry.group.dev.dependencies]
mypy = "^0.982"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
